--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
+    "chart.js": "^2.9.4",
+    "export-from-json": "^1.3.4",
+    "prop-types": "^15.7.2",
     "react": "^17.0.0",
+    "react-chartjs-2": "^2.10.0",
+    "react-cookie": "^4.0.3",
+    "react-countup": "^4.3.3",
+    "react-csv": "^2.0.3",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^17.0.0",
-    "react-scripts": "3.4.4"
+    "react-material-ui-carousel": "^2.1.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.4",
+    "react-spinners": "^0.9.0",
+    "react-toastify": "^6.0.9",
+    "write-json-file": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
